crates/biome_cli/tests/snapshots/main_cases_yaml/check_yaml_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.yaml`

```yaml
key1:   value1
key2:  value2
nested:
  child:   deep

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.yaml format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - key1:···value1
    2   │ - key2:··value2
      1 │ + key1:·value1
      2 │ + key2:·value2
    3 3 │   nested:
    4   │ - ··child:···deep
      4 │ + ··child:·deep
    5 5 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
