crates/biome_cli/tests/snapshots/main_cases_yaml/format_and_write_yaml_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.yaml`

```yaml
key1: value1
key2: value2
nested:
  child: deep

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
